make logging under control

--- a/.rubocop.yml
+++ b/.rubocop.yml
@@ -38,3 +38,7 @@ Metrics/BlockLength:
   Exclude:
     - Rakefile
     - app/routes/**/*
+
+Style/FrozenStringLiteralComment:
+  Exclude:
+    - .env.rb
