--- a/config/settings/production.yml
+++ b/config/settings/production.yml
@@ -3,3 +3,7 @@ db:
 logger:
   path: log/production.log
   level: <%= Logger::INFO %>
+rabbitmq:
+  host: <%= ENV.fetch('RABBITMQ_HOST') %>
+  username: <%= ENV.fetch('RABBITMQ_USER') %>
+  password: <%= ENV.fetch('RABBITMQ_PASSWORD') %>
