--- a/config/settings/test.yml
+++ b/config/settings/test.yml
@@ -3,3 +3,7 @@ db:
 logger:
   path: log/test.log
   level: <%= Logger::FATAL %>
+rabbitmq:
+  host: <%= ENV.fetch('RABBITMQ_HOST') %>
+  username: <%= ENV.fetch('RABBITMQ_USER') %>
+  password: <%= ENV.fetch('RABBITMQ_PASSWORD') %>
